<resources>
    <string name="app_name" translatable="false">Save Master</string>
    <string name="theme_title">Theme</string>
    <string name="light_theme_title">Light theme</string>
    <string name="dark_theme_title">Dark theme</string>
    <string name="savemasterdown_notification_channel_id" translatable="false">Tube</string>
    <string name="savemasterdown_notification_channel_name">Popup Player</string>
    <string name="savemasterdown_notification_channel_description">Notifications for Popup Player</string>
    <string name="savemasterdown_general_channel_name">General</string>
    <string name="savemasterdown_notification_slot_0_key" translatable="false">notification_slot_0_key</string>
    <string name="savemasterdown_notification_slot_1_key" translatable="false">notification_slot_1_key</string>
    <string name="savemasterdown_notification_slot_2_key" translatable="false">notification_slot_2_key</string>
    <string name="savemasterdown_notification_slot_3_key" translatable="false">notification_slot_3_key</string>
    <string name="savemasterdown_notification_slot_4_key" translatable="false">notification_slot_4_key</string>
    <string name="savemasterdown_notification_slot_compact_0_key" translatable="false">notification_slot_compact_0_key</string>
    <string name="savemasterdown_notification_slot_compact_1_key" translatable="false">notification_slot_compact_1_key</string>
    <string name="savemasterdown_notification_slot_compact_2_key" translatable="false">notification_slot_compact_2_key</string>
    <string name="savemasterdown_last_resize_mode" translatable="false">last_resize_mode</string>
    <string name="savemasterdown_playback_speed_key" translatable="false">playback_speed_key</string>
    <string name="savemasterdown_playback_pitch_key" translatable="false">playback_pitch_key</string>
    <string name="savemasterdown_playback_skip_silence_key" translatable="false">playback_skip_silence_key</string>
    <string name="savemasterdown_subscribe_button_title">Subscribe</string>
    <string name="savemasterdown_subscribed_button_title">Subscribed</string>
    <string name="savemasterdown_unsubscribed">Unsubscribe</string>
    <string name="savemasterdown_subscription_change_failed">Unable to change subscription</string>
    <string name="savemasterdown_subscription_update_failed">Unable to update subscription</string>
    <string name="savemasterdown_tab_subscriptions">Subscription</string>
    <string name="savemasterdown_notification_action_0_title">First action button</string>
    <string name="savemasterdown_notification_action_1_title">Second action button</string>
    <string name="savemasterdown_notification_action_2_title">Third action button</string>
    <string name="savemasterdown_notification_action_3_title">Fourth action button</string>
    <string name="savemasterdown_notification_action_4_title">Fifth action button</string>
    <string name="savemasterdown_notification_actions_summary">Edit each notification action below by tapping on it. Select up to three of them to be shown in the compact notification by using the checkboxes on the right.</string>
    <string name="savemasterdown_notification_actions_at_most_three">You can select at most three actions to show in the compact notification!</string>
    <string name="savemasterdown_notification_action_repeat">Repeat</string>
    <string name="savemasterdown_notification_action_shuffle">Shuffle</string>
    <string name="savemasterdown_notification_action_buffering">Buffering</string>
    <string name="savemasterdown_notification_action_nothing">Nothing</string>
    <string name="savemasterdown_view_count_text">%1$s views</string>
    <string name="savemasterdown_upload_date_text">Published on %1$s</string>
    <string name="savemasterdown_short_thousand">K</string>
    <string name="savemasterdown_short_million">M</string>
    <string name="savemasterdown_short_billion">B</string>
    <string name="savemasterdown_no_videos">No videos</string>
    <plurals name="videos">
        <item quantity="one">%s video</item>
        <item quantity="other">%s videos</item>
    </plurals>
    <string name="savemasterdown_no_subscribers">No subscribers</string>
    <plurals name="savemasterdown_subscribers">
        <item quantity="one">%s subscriber</item>
        <item quantity="other">%s subscribers</item>
    </plurals>
    <string name="savemasterdown_no_one_listening">No one is listening</string>
    <plurals name="listening">
        <item quantity="one">%s listener</item>
        <item quantity="other">%s listeners</item>
    </plurals>
    <string name="no_views">No views</string>
    <plurals name="views">
        <item quantity="one">%s view</item>
        <item quantity="other">%s views</item>
    </plurals>
    <string name="savemasterdown_no_one_watching">No one is watching</string>
    <plurals name="watching">
        <item quantity="one">%s watching</item>
        <item quantity="other">%s watching</item>
    </plurals>
    <string name="savemasterdown_charset_most_special_characters_value" translatable="false">[\\n\\r|\\?*&lt;":&gt;/']+</string>
    <string name="savemasterdown_trending">Trending</string>
    <string name="savemasterdown_discover">Discover</string>
    <string name="savemasterdown_library">Library</string>
    <string name="title_activity_popup_player">Popup Player</string>
    <string name="play_queue_remove">Remove</string>
    <string name="start_here_on_main">Play</string>
    <string name="play_queue_stream_detail">Details</string>
    <string name="savemasterdown_title_activity_history">History</string>
    <string name="savemasterdown_delete_item_search_history">Do you want to delete this item from search history?</string>
    <string name="savemasterdown_delete_all_history_prompt">Are you sure you want to delete all items from history?</string>
    <string name="savemasterdown_title_recently_played">Recently Played</string>
    <string name="savemasterdown_title_most_played">Most Played</string>
    <string name="tube" translatable="false">Tube</string>
    <string name="savemasterdown_new_playlist">Playlist</string>
    <string name="savemasterdown_create_new_playlist">Create New Playlist</string>
    <string name="savemasterdown_bookmark_playlist">Add Playlist</string>
    <string name="savemasterdown_added_playlist_to_bookmark">Added Playlist to Library</string>
    <string name="savemasterdown_removed_playlist_from_bookmark">Removed the Playlist from Library</string>
    <string name="savemasterdown_append_playlist">Add to Playlist</string>
    <string name="savemasterdown_playlist_thumbnail_change_success">Playlist thumbnail has been changed</string>
    <string name="savemasterdown_set_as_playlist_thumbnail">Set as Playlist Thumbnail</string>
    <string name="savemasterdown_delete_playlist_prompt">Do you want to delete this playlist?</string>
    <string name="savemasterdown_playlist_creation_success">Playlist created</string>
    <string name="savemasterdown_playlist_name_input">Playlist name</string>
    <string name="savemasterdown_playlist_add_stream_success">Added to playlist</string>
    <string name="savemasterdown_music">Music</string>
    <string name="savemasterdown_entertainment">Entertainment show</string>
    <string name="savemasterdown_gaming">Gaming</string>
    <string name="savemasterdown_sports">Sport news</string>
    <string name="savemasterdown_cars">Cars</string>
    <string name="savemasterdown_pets">Pet lovers</string>
    <string name="savemasterdown_films">Movies</string>
    <string name="caption_none">Captions</string>
    <string name="caption_auto_generated">Auto-generated</string>
    <string name="playback_speed_normal">Normal</string>
    <string name="limit_data_usage_none_description">No limit</string>
    <string name="limit_mobile_data_usage_value" translatable="false">@string/limit_data_usage_none_key</string>
    <string-array name="limit_data_usage_description_list">
        <item>@string/limit_data_usage_none_description</item>
        <item>1080p60</item>
        <item>1080p</item>
        <item>720p60</item>
        <item>720p</item>
        <item>480p</item>
        <item>360p</item>
        <item>240p</item>
        <item>144p</item>
    </string-array>
    <string name="example_video_title">PureTube Video Title</string>
    <string name="example_channel_title">PureTube</string>
    <string name="savemasterdown_settings">Settings</string>
    <string name="savemasterdown_default_resolution_title">Default video resolution</string>
    <string name="savemasterdown_popup_tips_key">popup_tips_key</string>
    <string name="savemasterdown_popup_tips_title">Popup window</string>
    <string name="savemasterdown_popup_tips_summary">Long press the Popup window in three seconds to change the size</string>
    <string name="savemasterdown_popup_remember_size_pos_title">Save Popup size and position</string>
    <string name="savemasterdown_popup_remember_size_pos_summary">Save last size and position of Popup</string>
    <string name="savemasterdown_metadata_cache_wipe_title">Clear all cached</string>
    <string name="savemasterdown_default_popup_resolution_title">Default Popup resolution</string>
    <string name="savemasterdown_auto_queue_title">Autoplay next video</string>
    <string name="savemasterdown_auto_queue_summary">When you finish a video, another plays automatically</string>
    <string name="savemasterdown_show_search_suggestions_title">Search suggestions</string>
    <string name="savemasterdown_show_search_suggestions_summary">Show suggestions when searching</string>
    <string name="savemasterdown_enable_search_history_title">Search History</string>
    <string name="savemasterdown_show_higher_resolutions_title">Show higher resolution</string>
    <string name="savemasterdown_show_higher_resolutions_summary">Only some devices support playing 2K/4K videos</string>
    <string name="savemasterdown_metadata_cache_wipe_summary">Remove all cached data</string>
    <string name="savemasterdown_metadata_cache_wipe_complete_notice">All cached data deleted</string>
    <string name="savemasterdown_clear_views_history_summary">Clear watch history from devices</string>
    <string name="savemasterdown_delete_view_history_alert">Do you want to clear watch history?</string>
    <string name="savemasterdown_view_history_deleted">Watch history deleted.</string>
    <string name="savemasterdown_clear_search_history_title">Clear search history</string>
    <string name="savemasterdown_clear_search_history_summary">Clear history of search keywords</string>
    <string name="savemasterdown_delete_search_history_alert">Do you want to clear search history?</string>
    <string name="savemasterdown_search_history_deleted">Search history deleted.</string>
    <string name="savemasterdown_next_video_title">Up Next</string>
    <string name="savemasterdown_play_all">Play All</string>
    <string name="savemasterdown_controls_popup_title">Popup</string>
    <string name="savemasterdown_all">All</string>
    <string name="savemasterdown_channel">Channel</string>
    <string name="savemasterdown_playlist">Playlist</string>
    <string name="savemasterdown_videos">Videos</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="retry">Retry</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="show_error">Show error</string>
    <string name="savemasterdown_clear_download_history">Clear download history</string>
    <string name="savemasterdown_start_downloads">Start downloads</string>
    <string name="savemasterdown_pause_downloads">Pause downloads</string>
    <string name="video">Video</string>
    <string name="savemasterdown_show_info">Show info</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
</resources>