<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:tag="smsmsm"
        android:id="@+id/retry"
        android:title="@string/retry" />

    <item
        android:id="@+id/cancel"
        android:title="@string/cancel" />

    <item
        android:id="@+id/start"
        android:title="@string/start" />

    <item
        android:id="@+id/pause"
        android:title="@string/pause" />

    <item
        android:id="@+id/menu_item_share"
        android:title="@string/share" />

    <item
        android:id="@+id/delete"
        android:title="@string/delete" />

    <item
        android:id="@+id/error_message_view"
        android:title="@string/show_error" />

    <item
        android:id="@+id/source"
        android:title="@string/savemasterdown_show_info" />
</menu>
