<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:tag="smsmsm"
        android:id="@+id/start_downloads"
        android:icon="@drawable/savemasterdown_ic_play_arrow_white_24dp"
        android:title="@string/savemasterdown_start_downloads"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/pause_downloads"
        android:icon="@drawable/savemasterdown_ic_pause_white"
        android:title="@string/savemasterdown_pause_downloads"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/clear_list"
        android:icon="@drawable/ic_delete_savemasterdown_sweep_white_24dp"
        android:title="@string/savemasterdown_clear_download_history"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
