<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="smsmsm"
    android:background="?attr/windowBackground"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/toolbarColor"
        app:tabGravity="center"
        app:tabIndicatorColor="@color/savemasterdown_white"
        app:tabIndicatorHeight="3dp"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/savemasterdown_white"
        app:tabTextColor="@color/savemasterdown_white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/btn_most_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savemasterdown_title_most_played"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/btn_recently_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savemasterdown_title_recently_played"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/btn_history_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savemasterdown_enable_search_history_title"/>

    </com.google.android.material.tabs.TabLayout>

    <!-- Banner Ad -->
    <!--<include layout="@layout/savemasterdown_3banner" />-->
    <FrameLayout
        android:id="@+id/banner_container_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>