<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/playlist_control"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:tag="smsmsm"
    android:background="?attr/toolbarColor">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/playlist_ctrl_play_all_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/savemasterdown_play_all"
        android:textColor="@color/savemasterdown_white"
        android:textSize="12sp"
        app:cornerRadius="0dp"
        app:icon="@drawable/savemasterdown_ic_play_arrow_white_24dp"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        app:iconTint="@color/savemasterdown_white"
        app:rippleColor="@color/savemasterdown_app_dark_color"
        app:textAllCaps="true"/>

    <View
        android:id="@+id/anchorRight"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="?attr/savemasterdown_separator_color"
        android:clickable="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/playlist_ctrl_play_popup_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/savemasterdown_controls_popup_title"
        android:textColor="@color/savemasterdown_white"
        android:textSize="@dimen/channel_rss_title_size"
        app:cornerRadius="0dp"
        app:icon="@drawable/savemasterdown_ic_pict_in_pic_white_24dp"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        app:iconTint="@color/savemasterdown_white"
        app:rippleColor="@color/savemasterdown_app_dark_color"
        app:textAllCaps="true"/>

    <View
        android:id="@+id/anchorLeft"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="?attr/savemasterdown_separator_color"
        android:clickable="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/playlist_ctrl_share"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/share"
        android:textColor="@color/savemasterdown_white"
        android:textSize="@dimen/channel_rss_title_size"
        app:cornerRadius="0dp"
        app:icon="@drawable/savemasterdown_ic_share_white_24dp"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        app:iconTint="@color/savemasterdown_white"
        app:rippleColor="@color/savemasterdown_app_dark_color"
        app:textAllCaps="true"/>

</LinearLayout>
