<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="smsmsm"
    android:background="?attr/windowBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/toolbarColor"
            android:elevation="0dp"
            android:gravity="center_vertical"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:navigationIcon="@drawable/savemasterdown_ic_back_white_24dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:titleTextAppearance="@style/Toolbar.Title">

            <include
                android:id="@+id/toolbar_search_container"
                layout="@layout/toolbar_savemasterdown_search_layout" />

        </androidx.appcompat.widget.Toolbar>

        <RadioGroup
            android:id="@+id/filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/playlist"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/savemasterdown_bg_radio_button"
                android:button="@android:color/transparent"
                android:checked="true"
                android:gravity="center"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/savemasterdown_playlist"
                android:textColor="@drawable/savemasterdown_color_state_list_checked" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/channel"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/savemasterdown_bg_radio_button"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/savemasterdown_channel"
                android:textColor="@drawable/savemasterdown_color_state_list_checked" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/videos"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/savemasterdown_bg_radio_button"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/savemasterdown_videos"
                android:textColor="@drawable/savemasterdown_color_state_list_checked" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/all"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/savemasterdown_bg_radio_button"
                android:button="@android:color/transparent"
                android:checked="true"
                android:gravity="center"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/savemasterdown_all"
                android:textColor="@drawable/savemasterdown_color_state_list_checked" />

        </RadioGroup>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/windowBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/windowBackground"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/savemasterdown_list_stream_item" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/savemasterdown_app_primary_color"
            android:visibility="gone"
            tools:visibility="visible" />

        <include
            android:id="@+id/empty_state_view"
            layout="@layout/savemasterdown_list_search_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/suggestions_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/windowBackground"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone"
            tools:background="@android:color/transparent"
            tools:visibility="visible">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/suggestions_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/windowBackground"
                android:scrollbars="vertical"
                tools:listitem="@layout/savemasterdown_tem_search_suggestion" />
        </LinearLayout>

        <!--ERROR PANEL-->
        <include
            android:id="@+id/error_panel"
            layout="@layout/savemasterdown_error_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

